fix: remove overflow hidden from panel's content

--- a/styles/accordion.scss
+++ b/styles/accordion.scss
@@ -17,10 +17,7 @@ $yMargin: 30px;
 		display: flex;
 		width: 100%;
 		align-items: center;
-		padding: {
-			left: $padding;
-			right: $padding;
-		}
+		padding: 0 $padding;
 		background-color: white;
 		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 		&:not(:last-child) {
@@ -86,7 +83,6 @@ $yMargin: 30px;
 		> .content {
 			width: 100%;
 			height: 0;
-			overflow: hidden;
 			transition: all 0.5s ease-in-out;
 		}
 
